fix overflow

--- a/scss/media.scss
+++ b/scss/media.scss
@@ -74,7 +74,7 @@
         width: 300px;
     }
     .popover.right>.arrow{
-        margin-top: -37px;
+        margin-top: -47px;
 //        opacity: 0.99;
         left: auto;
         right: 10px;
